# wg

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json
assets/sass/: _card.scss  _layout.scss  _nav-bar.scss  _side-nav.scss  app.scss  index.scss  pico.scss
migrations/: 20250118024300_create_users_table.sql  20250118144000_create_chore_lists_table.sql  20250118165200_rename_user_name copy.sql  20250118_024300_create_people_table.sql  20250119115900_add_descriptions_and_comments.sql  20250119122700_add_chore_list_score_reset_interval.sql  20250215130700_add_foreign_key_indexes.sql  20250418100200_add_chore_interval.sql
src/: main.rs
src/application/: assets.rs  authentication.rs  chore.rs  chore_activity.rs  chore_list.rs  chore_list_user.rs  dashboard.rs  entry.rs  health.rs  language.rs  legal.rs  mod.rs  person.rs  settings.rs  theme.rs  user.rs
src/domain/: authentication_session.rs  chore.rs  chore_activity.rs  chore_list.rs  mod.rs  person.rs  user.rs  value.rs
src/model/: authentication_session.rs  chore_activity.rs  user.rs
src/templates/: helper.rs  layout.rs  mod.rs
src/templates/page/: authentication.rs  error.rs  legal.rs  mod.rs  settings.rs  user.rs
src/templates/page/chore_list/: activity.rs  chore.rs  mod.rs  user.rs
src/templates/partial/: navigation.rs
src/web/: mod.rs
src/web/application/: authentication.rs  chore.rs  chore_activity.rs  chore_list.rs  legal.rs  settings.rs  user.rs
src/web/extractor/: authentication.rs  language.rs  model.rs
src/web/handler/: authentication.rs  chore.rs  chore_activity.rs  chore_list.rs  chore_list_user.rs  entry.rs  health.rs  settings.rs  user.rs
src/web/template/: helper.rs  layout.rs
src/web/template/page/: authentication.rs  error.rs  legal.rs  settings.rs  user.rs
src/web/template/page/chore_list/: activity.rs  chore.rs  mod.rs  user.rs
src/web/template/partial/: navigation.rs
static/: manifest.json
static/js/: app.js
templates/layout/: default.jinja
templates/page/: dashboard.jinja  error.jinja  settings.jinja
templates/page/authentication/: login.jinja
templates/page/chore/: detail.jinja  list_activities.jinja  update.jinja
templates/page/chore_activity/: detail.jinja  update.jinja
templates/page/chore_list/: create.jinja  create_activity.jinja  create_chore.jinja  detail.jinja  list.jinja  list_activities.jinja  list_chores.jinja  list_users.jinja  settings.jinja  update.jinja
templates/page/chore_list/activity/: create.jinja  detail.jinja  list.jinja  update.jinja
templates/page/chore_list/chore/: create.jinja  detail.jinja  list.jinja  list_activities.jinja  update.jinja
templates/page/chore_list/user/: detail.jinja  list.jinja  list_activities.jinja
templates/page/legal/: privacy_policy.jinja
templates/page/user/: create.jinja  detail.jinja  list.jinja  update.jinja
templates/person/: create.jinja  detail.jinja  list.jinja
templates/user/: create.jinja  detail.jinja  list.jinja
translations/: de.ftl  en.ftl
wg/: Cargo.toml
wg-core/: Cargo.toml
wg-core/migrations/: 20250118155500_create_chore_activities_table.sql  20250215130300_add_unique_index_user_handle.sql  20250418114000_create_authentication_sessions_table.sql  20250703172300_change_user_handle_to_email.sql  20250703173900_add_user_last_used_language.sql  20250703195800_create_absences_table.sql
wg-core/src/: db.rs  lib.rs  value.rs
wg-core/src/model/: absence.rs  authentication_session.rs  chore.rs  chore_activity.rs  chore_list.rs  mod.rs  user.rs
wg-core/src/service/: absence.rs  chore.rs  chore_list.rs  mod.rs  user.rs
wg-mail/: Cargo.toml
wg-mail/src/: layout.rs  lib.rs  message.rs
wg-mail/translations/: de.ftl  en.ftl
wg-scheduler/: Cargo.toml
wg-scheduler/src/: job.rs  lib.rs
wg-web/: .gitignore  Cargo.toml  package.json
wg-web/assets/sass/: _description-list.scss  _headline-with-icon.scss  _timeline.scss  app.scss  pico.scss
wg-web/src/: lib.rs
wg-web/src/extractor/: authentication.rs  language.rs  mod.rs  model.rs
wg-web/src/handler/: absence.rs  authentication.rs  chore.rs  chore_activity.rs  chore_list.rs  chore_list_user.rs  entry.rs  health.rs  legal.rs  mod.rs  settings.rs  user.rs
wg-web/src/template/: helper.rs  layout.rs  mod.rs
wg-web/src/template/page/: absence.rs  authentication.rs  error.rs  legal.rs  mod.rs  settings.rs  user.rs
wg-web/src/template/page/chore_list/: activity.rs  chore.rs  mod.rs  user.rs
wg-web/src/template/partial/: navigation.rs
wg-web/static/: manifest.json
wg-web/translations/: de.ftl  en.ftl
wg/src/: main.rs
