[package]
name = "wg"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
askama = { version = "0.12.1", features = ["with-axum", "serde"] }
askama_axum = "0.4.0"
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
chrono = { version = "0.4.39", features = ["serde"] }
const-hex = "1.14.0"
getrandom = "0.2.15"
mime = "0.3.17"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "sqlite", "derive", "uuid", "chrono", "time"] }
sqlx-cli = "0.8.3"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["request-id", "trace", "catch-panic", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.0", features = ["serde", "v4", "v7"] }
