[package]
name = "wg"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Amann"]
license = "AGPL-3.0-only"

[dependencies]
accept-language = "3.1.0"
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
bon = "3.6.3"
chrono = { version = "0.4.39", features = ["serde"] }
const-hex = "1.14.0"
fluent-static = "0.5.0"
futures = "0.3.31"
getrandom = "0.2.15"
maud = { version = "0.27.0", features = ["axum"] }
mime_guess = "2.0.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rust-embed = "8.6.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "derive", "uuid", "chrono", "time"] }
strum = { version = "0.26.3", features = ["derive"] }
time = "0.3.41"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["request-id", "trace", "catch-panic", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.12.0", features = ["serde", "v4", "v7"] }

[profile.release]
lto = "fat"
