[package]
name = "wg_core"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Amann"]
license = "AGPL-3.0-only"

[dependencies]
argon2 = "0.5.3"
chrono = { version = "0.4.39", features = ["serde"] }
const-hex = "1.14.0"
getrandom = "0.2.15"
rand_core = { version = "0.6.4", features = ["getrandom"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "derive", "uuid", "chrono", "time"] }
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
uuid = { version = "1.12.0", features = ["serde", "v4", "v7"] }
