[package]
name = "wg_mail"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Amann"]
license = "AGPL-3.0-only"

[dependencies]
async-trait = "0.1.88"
fluent-static = "0.5.1"
futures = "0.3.31"
lettre = { version = "0.11.17", features = ["tokio1", "smtp-transport", "sendmail-transport"] }
maud = "0.27.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
wg_core = { path = "../wg-core" }
