[package]
name = "wg"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Amann"]
license = "AGPL-3.0-only"

[dependencies]
futures = "0.3.31"
secrecy = "0.10.3"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
wg_core = { path = "../wg-core" }
wg_web = { path = "../wg-web" }

[profile.release]
lto = "fat"
strip = true
