[package]
name = "wg"
version = "0.1.0"
edition = "2024"
authors = ["Oliver Amann"]
license = "AGPL-3.0-only"

[dependencies]
futures = "0.3.31"
lettre = { version = "0.11.17", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "sendmail-transport", "tracing"] }
secrecy = "0.10.3"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
wg_core = { path = "../wg-core" }
wg_mail = { path = "../wg-mail" }
wg_web = { path = "../wg-web" }
wg_scheduler = { path = "../wg-scheduler" }
